--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
     <title>ワーフリガチャシミュレーション</title>
 <body>
     <h1>ワーフリガチャシミュレーション</h1>
+    試行の回数を1万回ぐらいにすると確率計算の式に近い値になります。
     <h2></h2>   
     <a>何回引きますか?</a> <input type="text" id="n"/><br>
     <a>何回コンプするかの試行をしますか?</a> <input type="text" id="N"/><br>
