--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="シミュレーション.css">
+    <link rel="stylesheet" href="index.css">
     <title>ワーフリガチャシミュレーション</title>
 <body>
     <h1>ワーフリガチャシミュレーション</h1>
